--- a/.gitignore
+++ b/.gitignore
@@ -52,3 +52,15 @@ docs/_build/
 
 # PyBuilder
 target/
+
+# Created by https://www.gitignore.io
+#
+# ### vim ###
+# [._]*.s[a-w][a-z]
+# [._]s[a-w][a-z]
+# *.un~
+# Session.vim
+# .netrwhist
+# *~
+#
+#
