--- a/.gitignore
+++ b/.gitignore
@@ -56,11 +56,11 @@ target/
 # Created by https://www.gitignore.io
 #
 # ### vim ###
-# [._]*.s[a-w][a-z]
-# [._]s[a-w][a-z]
-# *.un~
-# Session.vim
-# .netrwhist
-# *~
+[._]*.s[a-w][a-z]
+[._]s[a-w][a-z]
+*.un~
+Session.vim
+.netrwhist
+*~
 #
 #
